maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:20: error: expected class or object definition
def isDirectionFree(dir:Direction):Boolean = {
^Escaper:32: error: Unmatched closing brace '}' ignored here
}
^